--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FocusGuard</title>
+    <title>FocusGuard - AI-Powered Focus Assistant</title>
+    <meta name="description" content="AI-powered Pomodoro timer with smart recommendations, task management, and productivity analytics." />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8192726439614235"
        crossorigin="anonymous"></script>
   </head>
