--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>FocusGuard</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8192726439614235"
        crossorigin="anonymous"></script>
-    <script type="module" crossorigin src="/assets/main-1z8lRo50.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
